objects/MC4SF__MC_Campaign_Hourly_Stats__c.object
<CustomObject>
    <fields>
        <fullName>MC4SF__Emails_Sent__c</fullName>
        <inlineHelpText>The total emails sent during the hour</inlineHelpText>
        <label>Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Campaign__c</fullName>
        <label>MC Campaign</label>
        <referenceTo>MC4SF__MC_Campaign__c</referenceTo>
        <relationshipLabel>MC Campaign Hourly Stats</relationshipLabel>
        <relationshipName>MC_Campaign_Hourly_Stats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MC4SF__Recipients_Click__c</fullName>
        <inlineHelpText>Unique clicks seen during the hour</inlineHelpText>
        <label>Recipients Click</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Statistics_Hour__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Statistics Hour</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Unique_Opens__c</fullName>
        <inlineHelpText>Unique opens seen during the hour</inlineHelpText>
        <label>Unique Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MC Campaign Hourly Stats</label>
    <nameField>
        <displayFormat>MCHourlyStats-{0}</displayFormat>
        <label>MC Campaign Hourly Stats Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MC Campaign Hourly Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>